--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   },
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.5.2",
+    "@types/firebase": "^3.2.1",
     "@types/negotiator": "^0.6.3",
     "@types/swiper": "^6.0.0",
     "bootstrap": "^5.3.2",
+    "firebase": "^10.8.0",
     "negotiator": "^0.6.3",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@firebase/firestore-types": "^3.0.0",
     "@types/bootstrap": "^5.2.10",
     "@types/node": "^20",
     "@types/react": "^18",
